--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.activemq.password=admin
 spring.activemq.broker-url=tcp://localhost:61616?jms.redeliveryPolicy.maximumRedeliveries=1
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
+activemq.queue.name=AccountQueue
+container.factory.name=myFactory
